--- a/QueueGames.AngularApp/Index.html
+++ b/QueueGames.AngularApp/Index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content" ng-view></div>
+    <div class="container body-content" style="margin-top: 10px;" ng-view></div>
     <hr />
     <footer>
         <p>&copy; My AngularJS Application</p>
