--- a/QueueGames.AngularApp/Index.html
+++ b/QueueGames.AngularApp/Index.html
@@ -14,6 +14,7 @@
     <script src="app/class/QueueItem.js"></script>
     <script src="app/controller/QueueItemController.js"></script>
     <script src="app/directive/queuemanager/QueueManager.js"></script>
+    <script src="app/directive/popupwindow/popupwindow.js"></script>
     <script src="app/controller/ProductsController.js"></script>
     <script src="app/app.config.js"></script>
 </head>
