--- a/QueueGames.AngularApp/app/directive/popupwindow/popup-window.html
+++ b/QueueGames.AngularApp/app/directive/popupwindow/popup-window.html
@@ -1,4 +1,8 @@
-﻿<div class="modal fade" id="popupWindow" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+﻿<div class="alert alert-success popupmessage" role="alert">
+    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+    <strong>Success!</strong> {{successMessage}}
+</div>
+<div class="modal fade" id="popupWindow" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -6,9 +10,12 @@
                 <h4 class="modal-title" id="myModalLabel">{{popupTitle}}</h4>
             </div>
             <div class="modal-body" ng-include="path" ng-model="dataSource"></div>
+            <div class="alert alert-danger" role="alert" ng-show="errorMessage != ''">
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {{errorMessage}}
+            </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" id="btnSave">Save changes</button>
             </div>
         </div>
     </div>
