Improving layout and callback of the popup window

--- a/QueueGames.AngularApp/app/directive/popupwindow/popup-window.html
+++ b/QueueGames.AngularApp/app/directive/popupwindow/popup-window.html
@@ -1,4 +1,4 @@
-﻿<div class="alert alert-success popupmessage" role="alert">
+﻿<div class="alert alert-success popupmessage col-md-5" role="alert">
     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
     <strong>Success!</strong> {{successMessage}}
 </div>
