Adding grid for Games

--- a/QueueGames.AngularApp/Index.html
+++ b/QueueGames.AngularApp/Index.html
@@ -16,6 +16,7 @@
     <script src="app/directive/queuemanager/QueueManager.js"></script>
     <script src="app/directive/popupwindow/popupwindow.js"></script>
     <script src="app/controller/ProductsController.js"></script>
+    <script src="app/controller/GamesController.js"></script>
     <script src="app/app.config.js"></script>
 </head>
 <body ng-app="QueueGames">
