Moving css style for queue window to Site.css + fixing bug when user delete a game right after it was created

--- a/QueueGames.AngularApp/app/directive/queuemanager/queue-manager-view.html
+++ b/QueueGames.AngularApp/app/directive/queuemanager/queue-manager-view.html
@@ -1,6 +1,4 @@
-﻿<link href="/app/directive/queuemanager/queue-manager.css" rel="stylesheet" />
-
-<div class="queueManager">
+﻿<div class="queueManager">
     <div class="command">
         <i class="glyphicon glyphicon-minus minimizeButton"></i>
         <i class="glyphicon glyphicon-remove closeButton"></i>
