Improving Queue Manager Window: Moving to Index.html and now it have only one data source, which contains requests from Products and Games list. And also it is always visible (does not disappear anymore between pages)

--- a/QueueGames.AngularApp/Index.html
+++ b/QueueGames.AngularApp/Index.html
@@ -39,6 +39,7 @@
     </div>
     <div class="container body-content" style="margin-top: 10px;" ng-view></div>
     <hr />
+    <queue-manager id="queueManager"></queue-manager>
     <footer>
         <p>&copy; My AngularJS Application</p>
     </footer>
