--- a/QueueGames.AngularApp/app/directive/queuemanager/queue-manager-view.html
+++ b/QueueGames.AngularApp/app/directive/queuemanager/queue-manager-view.html
@@ -19,7 +19,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in dataSource">
+                <tr ng-repeat="item in dataSrc">
                     <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;" title="{{item.field1}}">{{item.field1}}</td>
                     <td>{{item.field2}}</td>
                     <td class="text-center">
