Setting HTML5 mode for Angular routing

--- a/QueueGames.AngularApp/Index.html
+++ b/QueueGames.AngularApp/Index.html
@@ -17,6 +17,7 @@
     <script src="app/components/products/ProductsController.js"></script>
     <script src="app/components/games/GamesController.js"></script>
     <script src="app/app.config.js"></script>
+    <base href="/"></base>
 </head>
 <body ng-app="QueueGames">
     <div class="navbar navbar-default navbar-fixed-top">
@@ -27,10 +28,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav nav-pills">
                     <li>
-                        <a href="#/">Games</a>
+                        <a href="/Games">Games</a>
                     </li>
                     <li>
-                        <a href="#/Products">Products</a>
+                        <a href="/Products">Products</a>
                     </li>
                 </ul>
             </div>
